parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDASSIGN
    AUTO
    BREAK
    CASE
    CHAR
    CONST
    CONTINUE
    DEFAULT
    DIVIDEASSIGN
    DO
    DOUBLE
    ENUM
    EXTERN
    FOR
    GOTO
    LONG
    LSHIFT
    LSHIFTASSIGN
    MODASSIGN
    MULASSIGN
    ORASSIGN
    PLUSASSIGN
    REGISTER
    RSHIFT
    RSHIFTASSIGN
    SHORT
    SIGNED
    SIZEOF
    STATIC
    SUBASSIGN
    SWITCH
    TYPEDEF
    UNION
    UNSIGNED
    VOID
    VOLATILE
    XORASSIGN

Grammar

Rule 0     S' -> Program
Rule 1     EMPTY -> <empty>
Rule 2     SEMI -> ;
Rule 3     COMMA -> ,
Rule 4     ASSIGNOP -> =
Rule 5     RELOP -> >
Rule 6     RELOP -> <
Rule 7     RELOP -> GRTREQL
Rule 8     RELOP -> LESSEQL
Rule 9     RELOP -> EQUAL
Rule 10    RELOP -> NEQUAL
Rule 11    PLUS -> +
Rule 12    MINUS -> -
Rule 13    STAR -> *
Rule 14    DIV -> /
Rule 15    AND -> BOOLAND
Rule 16    OR -> BOOLOR
Rule 17    DOT -> .
Rule 18    NOT -> !
Rule 19    TYPE -> INT
Rule 20    TYPE -> FLOAT
Rule 21    LP -> (
Rule 22    RP -> )
Rule 23    LB -> [
Rule 24    RB -> ]
Rule 25    LC -> {
Rule 26    RC -> }
Rule 27    Program -> ExtDefList
Rule 28    ExtDefList -> ExtDef ExtDefList
Rule 29    ExtDefList -> EMPTY
Rule 30    FunHead -> Specifier FunDec
Rule 31    ExtDecHead -> Specifier VarDec
Rule 32    ExtDecHead -> Specifier FunDec
Rule 33    ExtDecList -> ExtDecList COMMA VarDec
Rule 34    ExtDecList -> ExtDecHead
Rule 35    ExtDecList -> ExtDecList COMMA FunDec
Rule 36    ExtDef -> ExtDecList SEMI
Rule 37    ExtDef -> Specifier SEMI
Rule 38    ExtDef -> FunHead CompSt
Rule 39    Specifier -> TYPE
Rule 40    Specifier -> StructSpecifier
Rule 41    StructSpecifier -> STRUCT OptTag LC DefList RC
Rule 42    StructSpecifier -> STRUCT Tag
Rule 43    OptTag -> ID
Rule 44    OptTag -> EMPTY
Rule 45    Tag -> ID
Rule 46    VarDec -> ID
Rule 47    VarDec -> VarDec LB NUMBER RB
Rule 48    FunDec -> ID LP VarList RP
Rule 49    FunDec -> ID LP RP
Rule 50    VarList -> ParamDec COMMA VarList
Rule 51    VarList -> ParamDec
Rule 52    ParamDec -> Specifier VarDec
Rule 53    CompSt -> LC DefList StmtList RC
Rule 54    StmtList -> Stmt StmtList
Rule 55    StmtList -> EMPTY
Rule 56    Stmt -> RETURN Exp SEMI
Rule 57    FlowCtrl -> IF LP Exp RP Stmt
Rule 58    FlowCtrl -> IF LP Exp RP Stmt ELSE Stmt
Rule 59    FlowCtrl -> WHILE LP Exp RP Stmt
Rule 60    Stmt -> Exp SEMI
Rule 61    Stmt -> CompSt
Rule 62    Stmt -> SEMI
Rule 63    Stmt -> FlowCtrl
Rule 64    DefList -> Def SEMI DefList
Rule 65    DefList -> EMPTY
Rule 66    Def -> DecList
Rule 67    DecHead -> Specifier Dec
Rule 68    DecList -> DecHead
Rule 69    DecList -> DecList COMMA Dec
Rule 70    Dec -> VarDec
Rule 71    Dec -> VarDec ASSIGNOP Exp
Rule 72    PrefixedExp -> STAR Exp
Rule 73    PrefixedExp -> & Exp
Rule 74    PrefixedExp -> MINUS Exp
Rule 75    PrefixedExp -> NOT Exp
Rule 76    PrefixedExp -> PLUS Exp
Rule 77    PrefixedExp -> PLUSSLF Exp
Rule 78    PrefixedExp -> SUBSLF Exp
Rule 79    PrefixedExp -> LP TYPE RP Exp
Rule 80    Exp -> LP Exp RP
Rule 81    Exp -> ID
Rule 82    Exp -> NUMBER
Rule 83    Exp -> DECIMAL
Rule 84    Exp -> STRINGLITERAL
Rule 85    Exp -> Exp ASSIGNOP Exp
Rule 86    Exp -> Exp PLUS Exp
Rule 87    Exp -> Exp MINUS Exp
Rule 88    Exp -> Exp STAR Exp
Rule 89    Exp -> Exp DIV Exp
Rule 90    Exp -> FuncCall
Rule 91    Exp -> PrefixedExp
Rule 92    Exp -> Exp AND Exp
Rule 93    Exp -> Exp OR Exp
Rule 94    Exp -> ! Exp
Rule 95    Exp -> Exp RELOP Exp
Rule 96    Exp -> Exp LB Exp RB
Rule 97    Exp -> Exp DOT ID
Rule 98    FuncCall -> ID LP Args RP
Rule 99    FuncCall -> ID LP RP
Rule 100   Args -> Exp COMMA Args
Rule 101   Args -> Exp

Terminals, with rules where they appear

!                    : 18 94
&                    : 73
(                    : 21
)                    : 22
*                    : 13
+                    : 11
,                    : 3
-                    : 12
.                    : 17
/                    : 14
;                    : 2
<                    : 6
=                    : 4
>                    : 5
ANDASSIGN            : 
AUTO                 : 
BOOLAND              : 15
BOOLOR               : 16
BREAK                : 
CASE                 : 
CHAR                 : 
CONST                : 
CONTINUE             : 
DECIMAL              : 83
DEFAULT              : 
DIVIDEASSIGN         : 
DO                   : 
DOUBLE               : 
ELSE                 : 58
ENUM                 : 
EQUAL                : 9
EXTERN               : 
FLOAT                : 20
FOR                  : 
GOTO                 : 
GRTREQL              : 7
ID                   : 43 45 46 48 49 81 97 98 99
IF                   : 57 58
INT                  : 19
LESSEQL              : 8
LONG                 : 
LSHIFT               : 
LSHIFTASSIGN         : 
MODASSIGN            : 
MULASSIGN            : 
NEQUAL               : 10
NUMBER               : 47 82
ORASSIGN             : 
PLUSASSIGN           : 
PLUSSLF              : 77
REGISTER             : 
RETURN               : 56
RSHIFT               : 
RSHIFTASSIGN         : 
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 
STRINGLITERAL        : 84
STRUCT               : 41 42
SUBASSIGN            : 
SUBSLF               : 78
SWITCH               : 
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VOID                 : 
VOLATILE             : 
WHILE                : 59
XORASSIGN            : 
[                    : 23
]                    : 24
error                : 
{                    : 25
}                    : 26

Nonterminals, with rules where they appear

AND                  : 92
ASSIGNOP             : 71 85
Args                 : 98 100
COMMA                : 33 35 50 69 100
CompSt               : 38 61
DIV                  : 89
DOT                  : 97
Dec                  : 67 69
DecHead              : 68
DecList              : 66 69
Def                  : 64
DefList              : 41 53 64
EMPTY                : 29 44 55 65
Exp                  : 56 57 58 59 60 71 72 73 74 75 76 77 78 79 80 85 85 86 86 87 87 88 88 89 89 92 92 93 93 94 95 95 96 96 97 100 101
ExtDecHead           : 34
ExtDecList           : 33 35 36
ExtDef               : 28
ExtDefList           : 27 28
FlowCtrl             : 63
FunDec               : 30 32 35
FunHead              : 38
FuncCall             : 90
LB                   : 47 96
LC                   : 41 53
LP                   : 48 49 57 58 59 79 80 98 99
MINUS                : 74 87
NOT                  : 75
OR                   : 93
OptTag               : 41
PLUS                 : 76 86
ParamDec             : 50 51
PrefixedExp          : 91
Program              : 0
RB                   : 47 96
RC                   : 41 53
RELOP                : 95
RP                   : 48 49 57 58 59 79 80 98 99
SEMI                 : 36 37 56 60 62 64
STAR                 : 72 88
Specifier            : 30 31 32 37 52 67
Stmt                 : 54 57 58 58 59
StmtList             : 53 54
StructSpecifier      : 40
TYPE                 : 39 79
Tag                  : 42
VarDec               : 31 33 47 52 70 71
VarList              : 48 50

Parsing method: LALR

state 0

    (0) S' -> . Program
    (27) Program -> . ExtDefList
    (28) ExtDefList -> . ExtDef ExtDefList
    (29) ExtDefList -> . EMPTY
    (36) ExtDef -> . ExtDecList SEMI
    (37) ExtDef -> . Specifier SEMI
    (38) ExtDef -> . FunHead CompSt
    (1) EMPTY -> .
    (33) ExtDecList -> . ExtDecList COMMA VarDec
    (34) ExtDecList -> . ExtDecHead
    (35) ExtDecList -> . ExtDecList COMMA FunDec
    (39) Specifier -> . TYPE
    (40) Specifier -> . StructSpecifier
    (30) FunHead -> . Specifier FunDec
    (31) ExtDecHead -> . Specifier VarDec
    (32) ExtDecHead -> . Specifier FunDec
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT
    (41) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (42) StructSpecifier -> . STRUCT Tag

    $end            reduce using rule 1 (EMPTY -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRUCT          shift and go to state 13

    Program                        shift and go to state 1
    ExtDefList                     shift and go to state 2
    ExtDef                         shift and go to state 3
    EMPTY                          shift and go to state 4
    ExtDecList                     shift and go to state 5
    Specifier                      shift and go to state 6
    FunHead                        shift and go to state 7
    ExtDecHead                     shift and go to state 8
    TYPE                           shift and go to state 9
    StructSpecifier                shift and go to state 10

state 1

    (0) S' -> Program .



state 2

    (27) Program -> ExtDefList .

    $end            reduce using rule 27 (Program -> ExtDefList .)


state 3

    (28) ExtDefList -> ExtDef . ExtDefList
    (28) ExtDefList -> . ExtDef ExtDefList
    (29) ExtDefList -> . EMPTY
    (36) ExtDef -> . ExtDecList SEMI
    (37) ExtDef -> . Specifier SEMI
    (38) ExtDef -> . FunHead CompSt
    (1) EMPTY -> .
    (33) ExtDecList -> . ExtDecList COMMA VarDec
    (34) ExtDecList -> . ExtDecHead
    (35) ExtDecList -> . ExtDecList COMMA FunDec
    (39) Specifier -> . TYPE
    (40) Specifier -> . StructSpecifier
    (30) FunHead -> . Specifier FunDec
    (31) ExtDecHead -> . Specifier VarDec
    (32) ExtDecHead -> . Specifier FunDec
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT
    (41) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (42) StructSpecifier -> . STRUCT Tag

    $end            reduce using rule 1 (EMPTY -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRUCT          shift and go to state 13

    ExtDef                         shift and go to state 3
    ExtDefList                     shift and go to state 14
    EMPTY                          shift and go to state 4
    ExtDecList                     shift and go to state 5
    Specifier                      shift and go to state 6
    FunHead                        shift and go to state 7
    ExtDecHead                     shift and go to state 8
    TYPE                           shift and go to state 9
    StructSpecifier                shift and go to state 10

state 4

    (29) ExtDefList -> EMPTY .

    $end            reduce using rule 29 (ExtDefList -> EMPTY .)


state 5

    (36) ExtDef -> ExtDecList . SEMI
    (33) ExtDecList -> ExtDecList . COMMA VarDec
    (35) ExtDecList -> ExtDecList . COMMA FunDec
    (2) SEMI -> . ;
    (3) COMMA -> . ,

    ;               shift and go to state 17
    ,               shift and go to state 18

    SEMI                           shift and go to state 15
    COMMA                          shift and go to state 16

state 6

    (37) ExtDef -> Specifier . SEMI
    (30) FunHead -> Specifier . FunDec
    (31) ExtDecHead -> Specifier . VarDec
    (32) ExtDecHead -> Specifier . FunDec
    (2) SEMI -> . ;
    (48) FunDec -> . ID LP VarList RP
    (49) FunDec -> . ID LP RP
    (46) VarDec -> . ID
    (47) VarDec -> . VarDec LB NUMBER RB

    ;               shift and go to state 17
    ID              shift and go to state 22

    SEMI                           shift and go to state 19
    FunDec                         shift and go to state 20
    VarDec                         shift and go to state 21

state 7

    (38) ExtDef -> FunHead . CompSt
    (53) CompSt -> . LC DefList StmtList RC
    (25) LC -> . {

    {               shift and go to state 25

    CompSt                         shift and go to state 23
    LC                             shift and go to state 24

state 8

    (34) ExtDecList -> ExtDecHead .

    ;               reduce using rule 34 (ExtDecList -> ExtDecHead .)
    ,               reduce using rule 34 (ExtDecList -> ExtDecHead .)


state 9

    (39) Specifier -> TYPE .

    ;               reduce using rule 39 (Specifier -> TYPE .)
    ID              reduce using rule 39 (Specifier -> TYPE .)


state 10

    (40) Specifier -> StructSpecifier .

    ;               reduce using rule 40 (Specifier -> StructSpecifier .)
    ID              reduce using rule 40 (Specifier -> StructSpecifier .)


state 11

    (19) TYPE -> INT .

    ;               reduce using rule 19 (TYPE -> INT .)
    ID              reduce using rule 19 (TYPE -> INT .)
    )               reduce using rule 19 (TYPE -> INT .)


state 12

    (20) TYPE -> FLOAT .

    ;               reduce using rule 20 (TYPE -> FLOAT .)
    ID              reduce using rule 20 (TYPE -> FLOAT .)
    )               reduce using rule 20 (TYPE -> FLOAT .)


state 13

    (41) StructSpecifier -> STRUCT . OptTag LC DefList RC
    (42) StructSpecifier -> STRUCT . Tag
    (43) OptTag -> . ID
    (44) OptTag -> . EMPTY
    (45) Tag -> . ID
    (1) EMPTY -> .

    ID              shift and go to state 28
    {               reduce using rule 1 (EMPTY -> .)

    OptTag                         shift and go to state 26
    Tag                            shift and go to state 27
    EMPTY                          shift and go to state 29

state 14

    (28) ExtDefList -> ExtDef ExtDefList .

    $end            reduce using rule 28 (ExtDefList -> ExtDef ExtDefList .)


state 15

    (36) ExtDef -> ExtDecList SEMI .

    INT             reduce using rule 36 (ExtDef -> ExtDecList SEMI .)
    FLOAT           reduce using rule 36 (ExtDef -> ExtDecList SEMI .)
    STRUCT          reduce using rule 36 (ExtDef -> ExtDecList SEMI .)
    $end            reduce using rule 36 (ExtDef -> ExtDecList SEMI .)


state 16

    (33) ExtDecList -> ExtDecList COMMA . VarDec
    (35) ExtDecList -> ExtDecList COMMA . FunDec
    (46) VarDec -> . ID
    (47) VarDec -> . VarDec LB NUMBER RB
    (48) FunDec -> . ID LP VarList RP
    (49) FunDec -> . ID LP RP

    ID              shift and go to state 32

    VarDec                         shift and go to state 30
    FunDec                         shift and go to state 31

state 17

    (2) SEMI -> ; .

    INT             reduce using rule 2 (SEMI -> ; .)
    FLOAT           reduce using rule 2 (SEMI -> ; .)
    STRUCT          reduce using rule 2 (SEMI -> ; .)
    $end            reduce using rule 2 (SEMI -> ; .)
    RETURN          reduce using rule 2 (SEMI -> ; .)
    ID              reduce using rule 2 (SEMI -> ; .)
    NUMBER          reduce using rule 2 (SEMI -> ; .)
    DECIMAL         reduce using rule 2 (SEMI -> ; .)
    STRINGLITERAL   reduce using rule 2 (SEMI -> ; .)
    !               reduce using rule 2 (SEMI -> ; .)
    ;               reduce using rule 2 (SEMI -> ; .)
    IF              reduce using rule 2 (SEMI -> ; .)
    WHILE           reduce using rule 2 (SEMI -> ; .)
    (               reduce using rule 2 (SEMI -> ; .)
    &               reduce using rule 2 (SEMI -> ; .)
    PLUSSLF         reduce using rule 2 (SEMI -> ; .)
    SUBSLF          reduce using rule 2 (SEMI -> ; .)
    {               reduce using rule 2 (SEMI -> ; .)
    *               reduce using rule 2 (SEMI -> ; .)
    -               reduce using rule 2 (SEMI -> ; .)
    +               reduce using rule 2 (SEMI -> ; .)
    }               reduce using rule 2 (SEMI -> ; .)
    ELSE            reduce using rule 2 (SEMI -> ; .)


state 18

    (3) COMMA -> , .

    ID              reduce using rule 3 (COMMA -> , .)
    INT             reduce using rule 3 (COMMA -> , .)
    FLOAT           reduce using rule 3 (COMMA -> , .)
    STRUCT          reduce using rule 3 (COMMA -> , .)
    NUMBER          reduce using rule 3 (COMMA -> , .)
    DECIMAL         reduce using rule 3 (COMMA -> , .)
    STRINGLITERAL   reduce using rule 3 (COMMA -> , .)
    !               reduce using rule 3 (COMMA -> , .)
    (               reduce using rule 3 (COMMA -> , .)
    &               reduce using rule 3 (COMMA -> , .)
    PLUSSLF         reduce using rule 3 (COMMA -> , .)
    SUBSLF          reduce using rule 3 (COMMA -> , .)
    *               reduce using rule 3 (COMMA -> , .)
    -               reduce using rule 3 (COMMA -> , .)
    +               reduce using rule 3 (COMMA -> , .)


state 19

    (37) ExtDef -> Specifier SEMI .

    INT             reduce using rule 37 (ExtDef -> Specifier SEMI .)
    FLOAT           reduce using rule 37 (ExtDef -> Specifier SEMI .)
    STRUCT          reduce using rule 37 (ExtDef -> Specifier SEMI .)
    $end            reduce using rule 37 (ExtDef -> Specifier SEMI .)


state 20

    (30) FunHead -> Specifier FunDec .
    (32) ExtDecHead -> Specifier FunDec .

    {               reduce using rule 30 (FunHead -> Specifier FunDec .)
    ;               reduce using rule 32 (ExtDecHead -> Specifier FunDec .)
    ,               reduce using rule 32 (ExtDecHead -> Specifier FunDec .)


state 21

    (31) ExtDecHead -> Specifier VarDec .
    (47) VarDec -> VarDec . LB NUMBER RB
    (23) LB -> . [

    ;               reduce using rule 31 (ExtDecHead -> Specifier VarDec .)
    ,               reduce using rule 31 (ExtDecHead -> Specifier VarDec .)
    [               shift and go to state 34

    LB                             shift and go to state 33

state 22

    (48) FunDec -> ID . LP VarList RP
    (49) FunDec -> ID . LP RP
    (46) VarDec -> ID .
    (21) LP -> . (

    [               reduce using rule 46 (VarDec -> ID .)
    ;               reduce using rule 46 (VarDec -> ID .)
    ,               reduce using rule 46 (VarDec -> ID .)
    (               shift and go to state 36

    LP                             shift and go to state 35

state 23

    (38) ExtDef -> FunHead CompSt .

    INT             reduce using rule 38 (ExtDef -> FunHead CompSt .)
    FLOAT           reduce using rule 38 (ExtDef -> FunHead CompSt .)
    STRUCT          reduce using rule 38 (ExtDef -> FunHead CompSt .)
    $end            reduce using rule 38 (ExtDef -> FunHead CompSt .)


state 24

    (53) CompSt -> LC . DefList StmtList RC
    (64) DefList -> . Def SEMI DefList
    (65) DefList -> . EMPTY
    (66) Def -> . DecList
    (1) EMPTY -> .
    (68) DecList -> . DecHead
    (69) DecList -> . DecList COMMA Dec
    (67) DecHead -> . Specifier Dec
    (39) Specifier -> . TYPE
    (40) Specifier -> . StructSpecifier
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT
    (41) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (42) StructSpecifier -> . STRUCT Tag

    RETURN          reduce using rule 1 (EMPTY -> .)
    ID              reduce using rule 1 (EMPTY -> .)
    NUMBER          reduce using rule 1 (EMPTY -> .)
    DECIMAL         reduce using rule 1 (EMPTY -> .)
    STRINGLITERAL   reduce using rule 1 (EMPTY -> .)
    !               reduce using rule 1 (EMPTY -> .)
    ;               reduce using rule 1 (EMPTY -> .)
    IF              reduce using rule 1 (EMPTY -> .)
    WHILE           reduce using rule 1 (EMPTY -> .)
    (               reduce using rule 1 (EMPTY -> .)
    &               reduce using rule 1 (EMPTY -> .)
    PLUSSLF         reduce using rule 1 (EMPTY -> .)
    SUBSLF          reduce using rule 1 (EMPTY -> .)
    {               reduce using rule 1 (EMPTY -> .)
    *               reduce using rule 1 (EMPTY -> .)
    -               reduce using rule 1 (EMPTY -> .)
    +               reduce using rule 1 (EMPTY -> .)
    }               reduce using rule 1 (EMPTY -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRUCT          shift and go to state 13

    DefList                        shift and go to state 37
    Def                            shift and go to state 38
    EMPTY                          shift and go to state 39
    DecList                        shift and go to state 40
    DecHead                        shift and go to state 41
    Specifier                      shift and go to state 42
    TYPE                           shift and go to state 9
    StructSpecifier                shift and go to state 10

state 25

    (25) LC -> { .

    INT             reduce using rule 25 (LC -> { .)
    FLOAT           reduce using rule 25 (LC -> { .)
    STRUCT          reduce using rule 25 (LC -> { .)
    RETURN          reduce using rule 25 (LC -> { .)
    ID              reduce using rule 25 (LC -> { .)
    NUMBER          reduce using rule 25 (LC -> { .)
    DECIMAL         reduce using rule 25 (LC -> { .)
    STRINGLITERAL   reduce using rule 25 (LC -> { .)
    !               reduce using rule 25 (LC -> { .)
    ;               reduce using rule 25 (LC -> { .)
    IF              reduce using rule 25 (LC -> { .)
    WHILE           reduce using rule 25 (LC -> { .)
    (               reduce using rule 25 (LC -> { .)
    &               reduce using rule 25 (LC -> { .)
    PLUSSLF         reduce using rule 25 (LC -> { .)
    SUBSLF          reduce using rule 25 (LC -> { .)
    {               reduce using rule 25 (LC -> { .)
    *               reduce using rule 25 (LC -> { .)
    -               reduce using rule 25 (LC -> { .)
    +               reduce using rule 25 (LC -> { .)
    }               reduce using rule 25 (LC -> { .)


state 26

    (41) StructSpecifier -> STRUCT OptTag . LC DefList RC
    (25) LC -> . {

    {               shift and go to state 25

    LC                             shift and go to state 43

state 27

    (42) StructSpecifier -> STRUCT Tag .

    ;               reduce using rule 42 (StructSpecifier -> STRUCT Tag .)
    ID              reduce using rule 42 (StructSpecifier -> STRUCT Tag .)


state 28

    (43) OptTag -> ID .
    (45) Tag -> ID .

    {               reduce using rule 43 (OptTag -> ID .)
    ;               reduce using rule 45 (Tag -> ID .)
    ID              reduce using rule 45 (Tag -> ID .)


state 29

    (44) OptTag -> EMPTY .

    {               reduce using rule 44 (OptTag -> EMPTY .)


state 30

    (33) ExtDecList -> ExtDecList COMMA VarDec .
    (47) VarDec -> VarDec . LB NUMBER RB
    (23) LB -> . [

    ;               reduce using rule 33 (ExtDecList -> ExtDecList COMMA VarDec .)
    ,               reduce using rule 33 (ExtDecList -> ExtDecList COMMA VarDec .)
    [               shift and go to state 34

    LB                             shift and go to state 33

state 31

    (35) ExtDecList -> ExtDecList COMMA FunDec .

    ;               reduce using rule 35 (ExtDecList -> ExtDecList COMMA FunDec .)
    ,               reduce using rule 35 (ExtDecList -> ExtDecList COMMA FunDec .)


state 32

    (46) VarDec -> ID .
    (48) FunDec -> ID . LP VarList RP
    (49) FunDec -> ID . LP RP
    (21) LP -> . (

    [               reduce using rule 46 (VarDec -> ID .)
    ;               reduce using rule 46 (VarDec -> ID .)
    ,               reduce using rule 46 (VarDec -> ID .)
    (               shift and go to state 36

    LP                             shift and go to state 35

state 33

    (47) VarDec -> VarDec LB . NUMBER RB

    NUMBER          shift and go to state 44


state 34

    (23) LB -> [ .

    NUMBER          reduce using rule 23 (LB -> [ .)
    ID              reduce using rule 23 (LB -> [ .)
    DECIMAL         reduce using rule 23 (LB -> [ .)
    STRINGLITERAL   reduce using rule 23 (LB -> [ .)
    !               reduce using rule 23 (LB -> [ .)
    (               reduce using rule 23 (LB -> [ .)
    &               reduce using rule 23 (LB -> [ .)
    PLUSSLF         reduce using rule 23 (LB -> [ .)
    SUBSLF          reduce using rule 23 (LB -> [ .)
    *               reduce using rule 23 (LB -> [ .)
    -               reduce using rule 23 (LB -> [ .)
    +               reduce using rule 23 (LB -> [ .)


state 35

    (48) FunDec -> ID LP . VarList RP
    (49) FunDec -> ID LP . RP
    (50) VarList -> . ParamDec COMMA VarList
    (51) VarList -> . ParamDec
    (22) RP -> . )
    (52) ParamDec -> . Specifier VarDec
    (39) Specifier -> . TYPE
    (40) Specifier -> . StructSpecifier
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT
    (41) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (42) StructSpecifier -> . STRUCT Tag

    )               shift and go to state 48
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRUCT          shift and go to state 13

    VarList                        shift and go to state 45
    RP                             shift and go to state 46
    ParamDec                       shift and go to state 47
    Specifier                      shift and go to state 49
    TYPE                           shift and go to state 9
    StructSpecifier                shift and go to state 10

state 36

    (21) LP -> ( .

    )               reduce using rule 21 (LP -> ( .)
    INT             reduce using rule 21 (LP -> ( .)
    FLOAT           reduce using rule 21 (LP -> ( .)
    STRUCT          reduce using rule 21 (LP -> ( .)
    ID              reduce using rule 21 (LP -> ( .)
    NUMBER          reduce using rule 21 (LP -> ( .)
    DECIMAL         reduce using rule 21 (LP -> ( .)
    STRINGLITERAL   reduce using rule 21 (LP -> ( .)
    !               reduce using rule 21 (LP -> ( .)
    (               reduce using rule 21 (LP -> ( .)
    &               reduce using rule 21 (LP -> ( .)
    PLUSSLF         reduce using rule 21 (LP -> ( .)
    SUBSLF          reduce using rule 21 (LP -> ( .)
    *               reduce using rule 21 (LP -> ( .)
    -               reduce using rule 21 (LP -> ( .)
    +               reduce using rule 21 (LP -> ( .)


state 37

    (53) CompSt -> LC DefList . StmtList RC
    (54) StmtList -> . Stmt StmtList
    (55) StmtList -> . EMPTY
    (56) Stmt -> . RETURN Exp SEMI
    (60) Stmt -> . Exp SEMI
    (61) Stmt -> . CompSt
    (62) Stmt -> . SEMI
    (63) Stmt -> . FlowCtrl
    (1) EMPTY -> .
    (80) Exp -> . LP Exp RP
    (81) Exp -> . ID
    (82) Exp -> . NUMBER
    (83) Exp -> . DECIMAL
    (84) Exp -> . STRINGLITERAL
    (85) Exp -> . Exp ASSIGNOP Exp
    (86) Exp -> . Exp PLUS Exp
    (87) Exp -> . Exp MINUS Exp
    (88) Exp -> . Exp STAR Exp
    (89) Exp -> . Exp DIV Exp
    (90) Exp -> . FuncCall
    (91) Exp -> . PrefixedExp
    (92) Exp -> . Exp AND Exp
    (93) Exp -> . Exp OR Exp
    (94) Exp -> . ! Exp
    (95) Exp -> . Exp RELOP Exp
    (96) Exp -> . Exp LB Exp RB
    (97) Exp -> . Exp DOT ID
    (53) CompSt -> . LC DefList StmtList RC
    (2) SEMI -> . ;
    (57) FlowCtrl -> . IF LP Exp RP Stmt
    (58) FlowCtrl -> . IF LP Exp RP Stmt ELSE Stmt
    (59) FlowCtrl -> . WHILE LP Exp RP Stmt
    (21) LP -> . (
    (98) FuncCall -> . ID LP Args RP
    (99) FuncCall -> . ID LP RP
    (72) PrefixedExp -> . STAR Exp
    (73) PrefixedExp -> . & Exp
    (74) PrefixedExp -> . MINUS Exp
    (75) PrefixedExp -> . NOT Exp
    (76) PrefixedExp -> . PLUS Exp
    (77) PrefixedExp -> . PLUSSLF Exp
    (78) PrefixedExp -> . SUBSLF Exp
    (79) PrefixedExp -> . LP TYPE RP Exp
    (25) LC -> . {
    (13) STAR -> . *
    (12) MINUS -> . -
    (18) NOT -> . !
    (11) PLUS -> . +

    RETURN          shift and go to state 53
    }               reduce using rule 1 (EMPTY -> .)
    ID              shift and go to state 59
    NUMBER          shift and go to state 60
    DECIMAL         shift and go to state 61
    STRINGLITERAL   shift and go to state 62
    !               shift and go to state 68
    ;               shift and go to state 17
    IF              shift and go to state 69
    WHILE           shift and go to state 70
    (               shift and go to state 36
    &               shift and go to state 71
    PLUSSLF         shift and go to state 73
    SUBSLF          shift and go to state 74
    {               shift and go to state 25
    *               shift and go to state 75
    -               shift and go to state 76
    +               shift and go to state 77

    LC                             shift and go to state 24
    StmtList                       shift and go to state 50
    Stmt                           shift and go to state 51
    EMPTY                          shift and go to state 52
    Exp                            shift and go to state 54
    SEMI                           shift and go to state 55
    CompSt                         shift and go to state 56
    FlowCtrl                       shift and go to state 57
    LP                             shift and go to state 58
    PLUS                           shift and go to state 63
    MINUS                          shift and go to state 64
    STAR                           shift and go to state 65
    FuncCall                       shift and go to state 66
    PrefixedExp                    shift and go to state 67
    NOT                            shift and go to state 72

state 38

    (64) DefList -> Def . SEMI DefList
    (2) SEMI -> . ;

    ;               shift and go to state 17

    SEMI                           shift and go to state 78

state 39

    (65) DefList -> EMPTY .

    RETURN          reduce using rule 65 (DefList -> EMPTY .)
    ID              reduce using rule 65 (DefList -> EMPTY .)
    NUMBER          reduce using rule 65 (DefList -> EMPTY .)
    DECIMAL         reduce using rule 65 (DefList -> EMPTY .)
    STRINGLITERAL   reduce using rule 65 (DefList -> EMPTY .)
    !               reduce using rule 65 (DefList -> EMPTY .)
    ;               reduce using rule 65 (DefList -> EMPTY .)
    IF              reduce using rule 65 (DefList -> EMPTY .)
    WHILE           reduce using rule 65 (DefList -> EMPTY .)
    (               reduce using rule 65 (DefList -> EMPTY .)
    &               reduce using rule 65 (DefList -> EMPTY .)
    PLUSSLF         reduce using rule 65 (DefList -> EMPTY .)
    SUBSLF          reduce using rule 65 (DefList -> EMPTY .)
    {               reduce using rule 65 (DefList -> EMPTY .)
    *               reduce using rule 65 (DefList -> EMPTY .)
    -               reduce using rule 65 (DefList -> EMPTY .)
    +               reduce using rule 65 (DefList -> EMPTY .)
    }               reduce using rule 65 (DefList -> EMPTY .)


state 40

    (66) Def -> DecList .
    (69) DecList -> DecList . COMMA Dec
    (3) COMMA -> . ,

    ;               reduce using rule 66 (Def -> DecList .)
    ,               shift and go to state 18

    COMMA                          shift and go to state 79

state 41

    (68) DecList -> DecHead .

    ,               reduce using rule 68 (DecList -> DecHead .)
    ;               reduce using rule 68 (DecList -> DecHead .)


state 42

    (67) DecHead -> Specifier . Dec
    (70) Dec -> . VarDec
    (71) Dec -> . VarDec ASSIGNOP Exp
    (46) VarDec -> . ID
    (47) VarDec -> . VarDec LB NUMBER RB

    ID              shift and go to state 82

    Dec                            shift and go to state 80
    VarDec                         shift and go to state 81

state 43

    (41) StructSpecifier -> STRUCT OptTag LC . DefList RC
    (64) DefList -> . Def SEMI DefList
    (65) DefList -> . EMPTY
    (66) Def -> . DecList
    (1) EMPTY -> .
    (68) DecList -> . DecHead
    (69) DecList -> . DecList COMMA Dec
    (67) DecHead -> . Specifier Dec
    (39) Specifier -> . TYPE
    (40) Specifier -> . StructSpecifier
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT
    (41) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (42) StructSpecifier -> . STRUCT Tag

    }               reduce using rule 1 (EMPTY -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRUCT          shift and go to state 13

    DefList                        shift and go to state 83
    Def                            shift and go to state 38
    EMPTY                          shift and go to state 39
    DecList                        shift and go to state 40
    DecHead                        shift and go to state 41
    Specifier                      shift and go to state 42
    TYPE                           shift and go to state 9
    StructSpecifier                shift and go to state 10

state 44

    (47) VarDec -> VarDec LB NUMBER . RB
    (24) RB -> . ]
